Changes from review comments